tests/codegen/fail/interface/trait/method_default_impl.rs
use coasys_juniper::graphql_interface;

#[graphql_interface]
trait Character {
    fn id(&self) -> &str {
        "default"
    }
}

fn main() {}
